--- a/index.css
+++ b/index.css
@@ -1,5 +1,10 @@
 .purple {
   /* TODO: Add some style definitions for the purple class in here... */
+    color: #A020F0;
+}
+
+.animal{
+  color: #000;
 }
 
 /* #answer-display will have black text on a white background.
